# qsynthesis-revenge

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  Config.cmake  LICENSE  README.en.md  README.md  setup-vcpkg.bat  setup-vcpkg.py  setup-vcpkg.sh  setup_vcpkg.sh  xmake.lua
pkg/src/FFmpeg/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  Dep.cmake  Deploy.cmake  Deps.cmake  xmake.lua
src/Common/: CMakeLists.txt  Include.cmake
src/Common/NameDll/: Include.cmake
src/Common/WinMain/: CMakeLists.txt  Include.cmake  main.cpp  shared.h
src/Common/cmake/: AddExe.cmake  AddLib.cmake  AddPlugin.cmake  AddRes.cmake  NameDll.cmake  ProcDeploy.cmake  ProcDeps.cmake
src/Common/include/: com_global.h
src/Common/templates/: Win32ExeRes.rc.in
src/DiffSinger/: CMakeLists.txt
src/DiffSinger/App/: CMakeLists.txt
src/DiffSinger/Core/: CMakeLists.txt
src/DiffSinger/Element/: CMakeLists.txt
src/DiffSinger/Gui/: CMakeLists.txt
src/DiffSinger/Host/: CMakeLists.txt
src/DiffSinger/Intern/: CMakeLists.txt
src/DiffSinger/Medium/: CMakeLists.txt
src/DiffSinger/Plugin/: CMakeLists.txt
src/DiffSinger/Plugins/: CMakeLists.txt
src/DiffSinger/Staging/: CMakeLists.txt
src/DiffSinger/WinMain/: CMakeLists.txt
src/FramelessHelper/: .gitignore  CMakeLists.txt
src/FramelessHelper/examples/: CMakeLists.txt
src/LabelVoice/: CMakeLists.txt  Template.cmake  main.cpp
src/LabelVoice/Core/: CMakeLists.txt
src/LabelVoice/Element/: CMakeLists.txt
src/LabelVoice/Plugin/: CMakeLists.txt  Template.cmake
src/LabelVoice/Resources/: res.qrc
src/LabelVoice/Staging/: CMakeLists.txt  Entry.cpp  Entry.h  lvstaging_global.h
src/LabelVoice/WinMain/: CMakeLists.txt  main.cpp
src/QMidi/: CMakeLists.txt
src/QMidi/src/: QMidiFile.h  QMidiOut.h
src/QSynthesis/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Template.cmake  main.cpp
src/QSynthesis/Core/: CMakeLists.txt
src/QSynthesis/Element/: CMakeLists.txt
src/QSynthesis/Framework/: Macros.h
src/QSynthesis/Meta/: Namespace.cpp  Namespace.h
src/QSynthesis/Plugin/: CMakeLists.txt  Template.cmake
src/QSynthesis/Resources/: res.qrc
src/QSynthesis/Staging/: CMakeLists.txt  Entry.cpp  Entry.h  MainWindow.cpp  MainWindow.h  TestWindow.cpp  TestWindow.h
src/QSynthesis/WinMain/: CMakeLists.txt
src/QsLib/: CMakeLists.txt  Template.cmake
src/QsLib/Base/: CMakeLists.txt
src/QsLib/Framework/: CMakeLists.txt
src/QsLib/Integrate/: CMakeLists.txt
src/QsLib/Media/: CMakeLists.txt
src/QsLib/Plugin/: CMakeLists.txt  Template.cmake
src/QsLib/Plugins/: CMakeLists.txt
src/QsLib/SVS/: CMakeLists.txt
src/QsLib/Utils/: CMakeLists.txt
src/QsPlugin/: CMakeLists.txt
src/QsPlugin/AudioPlayback/: CMakeLists.txt
src/QsPlugin/SVSConverter/: CMakeLists.txt
src/QsPlugin/UtaPlugin/: CMakeLists.txt
src/QsPlugin/WindowFactory/: CMakeLists.txt
src/QsPlugins/: CMakeLists.txt
src/QsPlugins/CompressEngine/: CMakeLists.txt
src/QsPlugins/ImportFormats/: CMakeLists.txt
src/QsPlugins/WindowFactory/: CMakeLists.txt
src/QtMedium/: CMakeLists.txt
src/QtMedium/CoreLib/: CMakeLists.txt
src/QtMedium/Widgets/: CMakeLists.txt
src/Test/: CMakeLists.txt  Template.cmake  lvtest.cmake
src/Test/DecodeTest/: CMakeLists.txt  main.cpp
src/Test/MinLabel/: CMakeLists.txt  main.cpp  res.qrc
src/Test/MrqTest/: CMakeLists.txt  main.cpp
src/Test/PipeTest/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WaveObject.cpp
src/Test/PlayWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  WaveObject.h  main.cpp  res.qrc
src/Test/ReadAudioBenchmark/: CMakeLists.txt  main.cpp
src/Test/SpekTest/: CMakeLists.txt  main.cpp  spek-audio.cc  spek-pipeline.cc  spek-ruler.cc  spek-spectrogram.cc
src/Test/UstxTest/: CMakeLists.txt  main.cpp
src/Test/WaveEditorTest/: CMakeLists.txt  EventCapture.h  MainWindow.cpp  MainWindow.h  StretchingPixmapItem.cpp  StretchingPixmapItem.h  TimeAxisItem.cpp  TimeAxisItem.h  WaveEditor.cpp  WaveEditor.h  WaveEditorScene.cpp  WaveEditorScene.h  WaveEditorView.cpp  WaveEditorView.h  WaveformItem.cpp  WaveformItem.h  main.cpp
src/Test/ZlibTest/: CMakeLists.txt  main.cpp
src/TestNew/: CMakeLists.txt
src/TestNew/MidiTest/: CMakeLists.txt  main.cpp
src/Utilities/: CMakeLists.txt  Settle.cmake
src/Utilities/fsnotifier/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/DiffScope/: CMakeLists.txt
src/apps/LabelVoice/: Template.cmake
src/apps/diffscope/: CMakeLists.txt  config.json  config.json.in
src/apps/labelvoice/: CMakeLists.txt
src/fsnotifier/: CMakeLists.txt
src/fsnotifier/include/: fsnotifier_global.h
src/fsnotifier/src/: FileSystemNotifier.cpp
src/fsnotifier/tools/: CMakeLists.txt
src/fsnotifier/win32/: res.rc.in
src/libs/: CMakeLists.txt
src/libs/QsLib/: CMakeLists.txt
src/libs/QtMedium/: CMakeLists.txt
src/libs/choruskit/: CMakeLists.txt
src/libs/qslib/: CMakeLists.txt
src/libs/qtmediate/: CMakeLists.txt
src/libs/qtmedium/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/plugins/diffscope/: CMakeLists.txt
src/share/: CMakeLists.txt
src/share/common/: CMakeLists.txt
src/share/doc/: CMakeLists.txt
src/share/qt/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/shared/cmake/: AddExe.cmake  AddLib.cmake  AddPlugin.cmake  AddRes.cmake  Collect.cmake  ProcDeploy.cmake  ProcDeploy2.cmake  ProcDeps.cmake
src/shared/include/: com_global.h  shared_global.h
src/shared/src/: CMakeLists.txt
src/shared/templates/: Win32DllRes.rc.in  Win32ExeManifest.manifest.in  Win32ExeRes.rc.in
src/tests/: CMakeLists.txt
src/tests/AudioTest/: AudioBuffer.cpp  AudioBuffer.h  AudioBus.cpp  AudioBus.h  AudioResampler.cpp  AudioResampler.h  AudioTrack.cpp  AudioTrack.h  CMakeLists.txt  IAudioSource.cpp  IAudioSource.h  Pcm32BitFloatAudioSource.cpp  Pcm32BitFloatAudioSource.h  VstAudioOutput.cpp  VstAudioOutput.h  VstAudioOutputManager.cpp  VstAudioOutputManager.h  main.cpp  vst_bridge.cpp
src/tests/CrashTest/: CMakeLists.txt  main.cpp
src/tests/ExtSysTest/: CMakeLists.txt  main.cpp
src/tests/LyricTest/: CMakeLists.txt  (+2 more)
src/tools/: CMakeLists.txt
(+3774 files in other folders)
