include(Template.cmake)

if(APP_DEPLOY)
    add_compile_definitions(TEST_LIB_DIR=".")
    add_compile_definitions(TEST_APP_DIR="..")
    add_compile_definitions(TEST_PLUGINS_DIR="../${APP_EXT_DIR}/${APP_PUBLIC_PLUGINS_DIR}")
else()
    add_compile_definitions(TEST_LIB_DIR="${APP_LIB_DIR}")
    add_compile_definitions(TEST_APP_DIR=".")
    add_compile_definitions(TEST_PLUGINS_DIR="${APP_EXT_DIR}/${APP_PUBLIC_PLUGINS_DIR}")
endif()

if(NOT BUILD_SVS_PLUGINS_ONLY)
#    add_subdirectory(PlayWindow)
    add_subdirectory(SpekTest)
    add_subdirectory(MrqTest)
    add_subdirectory(MinLabel)
    add_subdirectory(WaveEditorTest)
    add_subdirectory(ReadAudioBenchmark)
    # add_subdirectory(PipeTest)
    # add_subdirectory(DecodeTest)
    # add_subdirectory(ZlibTest)
endif()

# add_subdirectory(UstxTest)
